<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/circle_icon_height"
        android:id="@+id/add_product_button"
        android:src="@drawable/ic_add_circle_outline_24dp"
        android:background="#00ffffff"
        android:contentDescription="@string/plus_sign"
        android:onClick="addProductListener"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:visibility="visible">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_product_title"
                android:layout_weight="1"
                android:hint="@string/product_title"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_product_category"
                android:layout_weight="1"
                android:hint="@string/product_category"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/new_product_price"
                android:layout_weight="1"
                android:hint="@string/product_price"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shop_spinner"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>